# p528-wasm

./: .gitignore  .gitmodules  build.sh
P528GTest/: P528GTest.vcxproj
cmake/: CMakeLists.txt  CMakePresets.json  README.md
cmake/p528/: CMakeLists.txt
cmake/test/: CMakeLists.txt
include/: p528.h  p676.h  p835.h
p528-gui/: .eslintrc.js  README.md  deploy.sh  package-lock.json  package.json  worker-api.js  worker.js
p528-gui/src/: App.vue  main.js
p528-gui/src/components/: PropagationChart.vue
src/p528/: CombineDistributions.cpp  FindKForYpiAt99Percent.cpp  GetPathLoss.cpp  InverseComplementaryCumulativeDistributionFunction.cpp  LineOfSight.cpp  LinearInterpolation.cpp  LongTermVariability.cpp  NakagamiRice.cpp  P528.cpp  RayOptics.cpp  ReflectionCoefficients.cpp  SmoothEarthDiffraction.cpp  TerminalGeometry.cpp  TranshorizonSearch.cpp  Troposcatter.cpp  ValidateInputs.cpp  data.cpp
src/p676/: GlobalWetPressure.cpp  LineShapeFactor.cpp  NonresonantDebyeAttenuation.cpp  OxygenData.cpp  RayTrace.cpp  RefractiveIndex.cpp  Refractivity.cpp  SlantPath.cpp  SpecificAttenuation.cpp  TerrestrialPath.cpp  WaterVapourData.cpp  WaterVapourDensityToPartialPressure.cpp
src/p835/: Conversions.cpp  MeanAnnualGlobalReferenceAtmosphere.cpp
test/data/: P528Test_001.csv
test/src/: LeapYearParameterizedTestFixture.cpp  P528GTest.h  P528GTestUtils.cpp  TestP528.cpp  TestP528DataTables.cpp
tests/cpp/: testP528.cpp
tests/js/: package-lock.json  package.json  testP528.js
wasm/: CMakeLists.txt  build-wasm-lib.sh  build-wasm.sh  p528json.cpp
win32/: p528.sln  p528.vcxproj
